Fix dark mode in Firefox

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,13 +3,15 @@
 @tailwind utilities;
 
 @layer base {
+  body {
+    @apply bg-white dark:bg-gray-900 transition-all;
+  }
   a {
     @apply border-b border-dashed border-gray-400;
   }
   a:hover {
     @apply opacity-70;
   }
-
   header a,
   footer a {
     @apply border-none;
